--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "372be107-1d44-43a2-a605-2f5d2facad37"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
